{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 58,
  "lineage": "3007c967-2cc2-4d33-b179-958bbedd94c5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-24T11:15:13.022-07:00",
            "deny": [],
            "description": "Allow HTTP traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/css-cedric-2023/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/global/networks/terraform-network",
            "priority": 1000,
            "project": "css-cedric-2023",
            "self_link": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_instance.vm_instance",
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230912",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/zones/europe-central2-a/disks/namaewa"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/css-cedric-2023/zones/europe-central2-a/instances/namaewa",
            "instance_id": "278545210869137997",
            "label_fingerprint": "uGPZCCsN6UA=",
            "labels": {
              "course": "css-gcp"
            },
            "machine_type": "f1-micro",
            "metadata": {
              "startup-script": "#!/bin/bash\nsudo apt-get update \u0026\u0026 sudo apt -y install apache2\n"
            },
            "metadata_fingerprint": "yMD02gFbW3Y=",
            "name": "namaewa",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.118.126.89",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/global/networks/terraform-network",
                "network_ip": "10.186.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/regions/europe-central2/subnetworks/terraform-network",
                "subnetwork_project": "css-cedric-2023"
              }
            ],
            "project": "css-cedric-2023",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/zones/europe-central2-a/instances/namaewa",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/css-cedric-2023/global/networks/terraform-network",
            "mtu": 0,
            "name": "terraform-network",
            "project": "css-cedric-2023",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/global/networks/terraform-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "private_network_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/css-cedric-2023/global/routes/private-network-internet",
            "name": "private-network-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/global/networks/terraform-network",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 100,
            "project": "css-cedric-2023",
            "self_link": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/global/routes/private-network-internet",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-24T11:34:33.240-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/css-cedric-2023/regions/europe-central2/routers/quickstart-router",
            "name": "quickstart-router",
            "network": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/global/networks/terraform-network",
            "project": "css-cedric-2023",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/css-cedric-2023/regions/europe-central2/routers/quickstart-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "css-cedric-2023/europe-central2/quickstart-router/quickstart-router-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "quickstart-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "css-cedric-2023",
            "region": "europe-central2",
            "router": "quickstart-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.router"
          ]
        }
      ]
    }
  ]
}